# devtime

./: .gitattributes  .gitignore  CLEAN_INSTALL_CHECK.md  CONTRIBUTING.md  DEMO_OUTPUT.md  DEMO_SCRIPT.md  GITHUB_RELEASE_PREP.md  LAUNCH_POSTS.md  LIMITATIONS.md  PACKAGING.md  PROOF.md  PUBLIC_FEEDBACK_PLAN.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.0_DRAFT.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.1_DRAFT.md  ROADMAP.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  devtime-got-this-wrong.yml
.github/workflows/: ci.yml  devtime-risk-review.yml  package-check.yml  publish-python-package.yml
examples/demo-saas/: .devtimeignore  README.md  package.json
examples/demo-saas/src/jobs/: queues.ts
fixtures/auth/invitation-jwt-not-access-token/: fixture.yaml
fixtures/auth/invitation-jwt-not-access-token/repo/src/invites/: token.ts
fixtures/auth/nextauth-url-test-not-auth/: fixture.yaml
fixtures/auth/nextauth-url-test-not-auth/repo/tests/: permalink.test.ts
fixtures/auth/session-id-not-auth/: fixture.yaml
fixtures/auth/session-id-not-auth/repo/tests/: trace.test.ts
fixtures/billing/calcom-real-paths-not-billing/: fixture.yaml
fixtures/billing/calcom-real-paths-plus-stripe-is-billing/: fixture.yaml
fixtures/billing/calendar-subscription-not-billing/: fixture.yaml
fixtures/billing/calendar-subscriptions-cleanup-not-billing/: fixture.yaml
fixtures/billing/connector-webhook-not-billing/: fixture.yaml
fixtures/billing/credential-webhook-not-billing/: fixture.yaml
fixtures/claims/jwt-usage-no-decision/: fixture.yaml
fixtures/claims/jwt-usage-no-decision/repo/: package.json
fixtures/claims/jwt-usage-no-decision/repo/src/auth/: tokens.ts
fixtures/concepts/stripe-webhooks-basic/: fixture.yaml
fixtures/concepts/stripe-webhooks-basic/repo/tests/: stripe-webhook.test.ts
fixtures/evidence/dependency-only-weak/: fixture.yaml
fixtures/evidence/dependency-only-weak/repo/: package.json
fixtures/evidence/e2e-spec-weak/: fixture.yaml
fixtures/export/model-download-not-export/: fixture.yaml
fixtures/express/express-named-router/: fixture.yaml
fixtures/express/express-named-router/repo/src/routes/: auth.ts
fixtures/jobs/bg-tasks-test-attaches-to-background-jobs/: fixture.yaml
fixtures/jobs/celery-is-background-jobs/: fixture.yaml
fixtures/jobs/job-role-options-not-background-jobs/: fixture.yaml
fixtures/jobs/job-title-not-background-jobs/: fixture.yaml
fixtures/jobs/migration-not-background-job/: fixture.yaml
fixtures/nextjs/nextauth-authentication/: fixture.yaml
fixtures/nextjs/nextjs-admin-route/: fixture.yaml
fixtures/nextjs/nextjs-data-export-route/: fixture.yaml
fixtures/nextjs/nextjs-file-upload-route/: fixture.yaml
fixtures/nextjs/paypal-webhook-is-billing/: fixture.yaml
fixtures/privacy/ignored-env-file/: fixture.yaml
fixtures/privacy/ignored-env-file/repo/: package.json  secrets.env
fixtures/uploads/avatar-url-not-upload/: fixture.yaml
fixtures/uploads/uploadfile-is-file-uploads/: fixture.yaml
fixtures/webhooks/billing-webhook-local-stripe/: fixture.yaml
fixtures/webhooks/generic-webhook-not-billing/: fixture.yaml
fixtures/webhooks/generic-webhook-plus-unrelated-billing-dep/: fixture.yaml
fixtures/webhooks/generic-webhook-plus-unrelated-billing-dep/repo/: package.json
fixtures/webhooks/stripe-dep-alone-not-billing/: fixture.yaml
fixtures/webhooks/stripe-dep-alone-not-billing/repo/: package.json
fixtures/webhooks/stripe-dep-alone-not-billing/repo/src/: index.ts
reports/reality-validation/: 00-summary.md  01-api-graveyard.md  02-snapilio.md  03-saasvoice.md
src/devtime/: __init__.py  cli.py  config.py  demo.py  paths.py  privacy.py
src/devtime/ai/: local.py  prompts.py  providers.py
src/devtime/db/: connection.py  migrations.py  repository.py  schema.sql
src/devtime/fixtures/: assertions.py  loader.py  runner.py
src/devtime/intelligence/: claims.py  concepts.py  context_pack.py  evidence.py  lineage.py  risk.py  scoring.py
src/devtime/mcp/: schemas.py  server.py  tools.py
src/devtime/output/: json_export.py  markdown.py  terminal.py
src/devtime/resources/demo-saas/tests/: auth-login.test.ts  stripe-signature.test.ts
src/devtime/scanner/: file_walker.py  ignore.py  language.py  signals.py
src/devtime/scanner/extractors/: base.py  config_files.py  docs.py  nextjs.py  python.py  tests.py  typescript.py
tests/: conftest.py
tests/fixtures/: test_fixture_runner.py  test_privacy_fixtures.py
tests/integration/: test_decision_corroboration.py  test_demo_command.py  test_evidence_precision.py  test_risk_review.py  test_risk_states.py  test_scan_demo_repo.py
tests/unit/: test_claims.py  test_context_pack.py  test_ignore.py  test_nextjs.py  test_output_and_frameworks.py  test_privacy_doctor.py  test_scoring.py  test_walker_prune.py
(+39 files in other folders)
